data/derived/sp14/progs/unify/prog1862.ml.out
Characters 82-84:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type ('a -> 'a) -> 'a -> 'a
       but an expression was expected of type 'b list
